--- a/Thesis_Zsuzsanna_Antalfi.ipynb
+++ b/Thesis_Zsuzsanna_Antalfi.ipynb
@@ -27,8 +27,6 @@
    "source": [
     "#dataset\n",
     "#selected stocks: information technology industry\n",
-    "#kivettem 3 reszvenyt, mert kesobb lettek bevezetve mint 2015 januar 1, igy problemat okoztak a rendszerben:\n",
-    "#HPE, PYPL, CSRA\n",
     "symbol_list = ['AAPL', 'ACN', 'ADBE', 'ADI', 'ADP', 'ADS','ADSK', 'AKAM', 'AMAT', 'ATVI', 'AVGO', 'CA','CRM',\n",
     "               'CTSH', 'CTXS' ,'CSCO', 'EA','EBAY', 'EMC', 'EQIX', 'FB', 'FFIV', 'FIS', 'FISV', 'FSLR', \n",
     "               'GOOG', 'GOOG_L', 'GPN', 'HPQ', 'HRS', 'IBM', 'INTC', 'INTU', 'JNPR', 'KLAC', 'LLTC', \n",
@@ -60,7 +58,7 @@
     }
    ],
    "source": [
-    "#Ures cellak megletenek ellenorzese\n",
+    "#Looking for nan values\n",
     "securities_panel.isnull().values.any()"
    ]
   },
@@ -72,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "#augmented dickey fuller teszt elvegzese a cointegration kiszamolasara\n",
+    "#Executing the Augmented Dickey Fuller test for cointegration\n",
     "def cointegration(securities_panel):\n",
     "    n = len(securities_panel.minor_axis)\n",
     "    score_matrix = np.zeros((n, n))\n",
